[gd_scene load_steps=4 format=3 uid="uid://mo3j5ebb0h41"]

[ext_resource type="Script" path="res://scenes/main_scene.gd" id="1_rj2x8"]
[ext_resource type="PackedScene" uid="uid://dh48o3fhn8dmv" path="res://scenes/camera/camera.tscn" id="1_sui8a"]
[ext_resource type="PackedScene" uid="uid://jt22ceo6xh1p" path="res://scenes/ui/floorplan_ui/floorplan_ui.tscn" id="3_q47ue"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_rj2x8")

[node name="Camera" parent="." instance=ExtResource("1_sui8a")]

[node name="FloorplanUi" parent="." instance=ExtResource("3_q47ue")]

[connection signal="panning" from="Camera" to="." method="_on_camera_panning"]
[connection signal="zooming_in" from="Camera" to="." method="_on_camera_zooming"]
[connection signal="zooming_out" from="Camera" to="." method="_on_camera_zooming"]
[connection signal="selection_dragging" from="FloorplanUi" to="." method="_on_floorplan_ui_selection_dragging"]
